--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "main": "server.js",
   "dependencies": {
     "axios": "^0.25.0",
     "bootstrap": "^5.1.3",
@@ -6,7 +7,22 @@
     "dotenv": "^14.3.2",
     "express": "^4.17.2",
     "express-session": "^1.17.2",
+    "if-env": "^1.0.4",
     "mysql2": "^2.3.3",
     "sequelize": "^6.14.1"
+  },
+  "scripts": {
+    "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
+    "start:prod": "node server.js",
+    "start:dev": "concurrently \"nodemon --ignore 'client/*'\" \"npm run client\"",
+    "client": "cd client && npm run start",
+    "seed": "node seeds/index.js",
+    "install": "cd client && npm install",
+    "build": "cd client && npm run build",
+    "heroku-postbuild": "npm run build"
+  },
+  "devDependencies": {
+    "concurrently": "^7.0.0",
+    "nodemon": "^2.0.15"
   }
 }
