--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "express-session": "^1.17.2",
     "if-env": "^1.0.4",
     "mysql2": "^2.3.3",
-    "sequelize": "^6.14.1"
+    "react-icons": "^4.3.1",
+    "sequelize": "^6.14.1",
+    "styled-components": "^5.3.3"
   },
   "scripts": {
     "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
